--- a/Contact.html
+++ b/Contact.html
@@ -42,7 +42,7 @@
     <h5>Address: Marandhalli,<br>Chinnagummanur village,<br>cdbettam(post), <br> palacode,<br> Dharmapuri District-636806<br> TamilNadu, India</h5>
     <h5>Mobile no:9566352952 </h5>
     <h5><a href="mailto:"tamilarasikumaran75@gmail.com">tamilarasikumaran75@gmail.com</h5>
-        <h5><a href="linkedin:"www.linkedin.com/in/thamilarasi-k-582008250">www.linkedin.com/in/thamilarasi-k-582008250</a></h5>
+        <h5><a href="https://www.linkedin.com/in/thamilarasi-k-582008250/">Linkedin</a></h5>
     </div>
 </body>
 </html>
