--- a/Contact.html
+++ b/Contact.html
@@ -41,8 +41,8 @@
     <h1 id="b">Contact</h1>
     <h5>Address: Marandhalli,<br>Chinnagummanur village,<br>cdbettam(post), <br> palacode,<br> Dharmapuri District-636806<br> TamilNadu, India</h5>
     <h5>Mobile no:9566352952 </h5>
-    <h5><a href="mailto:"tamilarasikumaran75@gmail.com">mail</h5>
-        <p><a href="https://www.linkedin.com/in/thamilarasi-k-582008250">Linkedin</a></p>
+    <h5><a href="https://www.linkedin.com/in/thamilarasi-k-582008250/">linkedin</h5>
+      
     </div>
 </body>
 </html>
