--- a/Contact.html
+++ b/Contact.html
@@ -42,6 +42,7 @@
     <h5>Address: Marandhalli,<br>Chinnagummanur village,<br>cdbettam(post), <br> palacode,<br> Dharmapuri District-636806<br> TamilNadu, India</h5>
     <h5>Mobile no:9566352952 </h5>
     <h5><a href="https://www.linkedin.com/in/thamilarasi-k-582008250/">linkedin</h5>
+         <h5><a href="thamilarasik26@gmail.com">mail</h5>
       
     </div>
 </body>
